<resources>
    <!-- UI -->
    <string name="app_name">Kính thông minh</string>
    <string name="voice_input">Voice input</string>
    <string name="smart_glass">Kính thông minh</string>
    <string name="glass_image">Biểu tượng Kính thông minh</string>
    <string name="my_smart_glass">Kính thông minh của tôi</string>
    <string name="icon_bluetooth">Biểu tượng Bluetooth</string>
    <string name="icon_wifi">Biểu tượng Wifi</string>
    <string name="btn_connect">Nút ấn kết nối với Kính thông minh</string>

    <!-- Home Fragment -->
    <string name="app_title">EdgeSight SmartGlass</string>
    <string name="device_name">My SmartGlass</string>
    <string name="camera_not_connected">Chưa nhận tín hiệu từ Camera</string>
    <string name="camera_connected">Đã nhận tín hiệu camera</string>
    <string name="connect_button">Kết nối</string>
    <string name="glass_icon_desc">Biểu tượng kính thông minh</string>



    <!-- Lệnh -->
    <string name="connect">Kết nối</string>
    <string name="connected">Đã kết nối</string>
    <string name="connecting">Đang kết nối...</string>
    <string name="disconnected">Chưa kết nối</string>
    <string name="connect_failed">Kết nối thất bại với Camera</string>
    <string name="disconnecting">Đang ngắt kết nối...</string>
    <string name="disconnect_failed">Ngắt kết nối thất bại</string>
    <string name="voice_prompt">Hãy nói lệnh...</string>

    <!-- Phản hồi -->
    <string name="voice_greeting">Chào bạn đến với SmartGlass.</string>
    <string name="voice_not_supported">Thiết bị không hỗ trợ giọng nói</string>
    <string name="voice_not_understood">Xin lỗi, tôi không hiểu lệnh của bạn</string>
    <string name="voice_connection_failed">Kết nối thất bại. Vui lòng thử lại.</string>

    <!-- Setting Fragment -->
    <string name="title_tts_settings">Cài đặt giọng nói</string>
    <string name="title_info_support">Thông tin và hỗ trợ</string>
    <string name="text_auto_connect">Tự động kết nối khi mở app</string>
    <string name="btn_app_info">Thông tin phiên bản và nhóm phát triển</string>
    <string name="title_app_info">Thông tin ứng dụng</string>
    <string name="close">Đóng</string>
    <string name="app_info_message">%1$s\nPhiên bản: %2$s\nNhóm Nghiên cứu khoa học: C1SE.16\nTrương Công Thành\nLê Hòa Hiệp\nNguyễn Văn Hướng\nPhạm Anh Khoa\nNguyễn Tấn Việt</string>

    <string name="speed_slow">Chậm</string>
    <string name="speed_normal">Bình Thường</string>
    <string name="speed_fast">Nhanh</string>
    <string name="speed_very_fast">Rất Nhanh</string>


    <string name="label_audio">Audio</string>
    <string name="label_giong_doc">Giọng Đọc</string>
    <string name="voice_male">Nam</string>
    <string name="voice_female">Nữ</string>
    <string name="label_tts_volume">Âm Lượng Giọng Nói</string>
    <string name="label_tts_speed">Tốc Độ Đọc</string>

    <string name="label_other">Khác</string>
    <string name="label_info">Thông Tin</string>
    <string name="checkbox_unlock_device">Giữ Sáng Màn Hình</string>
    <string name="label_team_info">Thông Tin Nhóm Phát Triển</string>
    <string name="label_app_version">Phiên Bản Ứng Dụng 1.0.0</string>

    <!-- API Keys -->
    <string name="vision_api_key">AIzaSyAO8KjJ3u8wU1CfudHjdPipmFqgjY87y5Q</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
