<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:text="EdgeSight SmartGlass"
        android:contentDescription="@string/smart_glass"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- FrameLayout giữ nguyên kích thước,
         chứa cả glass icon và WebView -->
    <FrameLayout
        android:id="@+id/cam_container"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_below="@id/app_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/glass_icon"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:src="@drawable/sun_glass"
            android:contentDescription="@string/glass_image"
            android:visibility="visible" />

        <WebView
            android:id="@+id/webViewCam"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My SmartGlass"
        android:contentDescription="@string/my_smart_glass"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@id/cam_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:id="@+id/icon_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_name"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/bluetooth"
            android:contentDescription="@string/icon_bluetooth" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/wifi_icon"
            android:contentDescription="@string/icon_wifi" />
    </LinearLayout>

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_below="@id/icon_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Kết nối"
        android:contentDescription="@string/btn_connect"
        android:textSize="45dp"
        android:enabled="true"
        android:backgroundTint="@color/button_on_color"
        android:textColor="#FFFFFF" />
</RelativeLayout>
